--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "aos": "^2.3.4",
     "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "thirdweb": "^5.88.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
